--- a/platformio.ini
+++ b/platformio.ini
@@ -1,9 +1,12 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
+[env:nano]
+platform = atmelavr
+framework = arduino
+board = nanoatmega328
+extra_scripts = pre:extra_script.py
+monitor_speed = 9600
+lib_ldf_mode  = deep+
+lib_deps =
+	arduino-libraries/Servo@^1.2.1
+	teckel12/NewPing@^1.9.7
+	arminjo/IRremote@^4.3.0
+	
