--- a/platformio.ini
+++ b/platformio.ini
@@ -1,7 +1,9 @@
-[env:nano]
+[platformio]
+default_envs = nano
+
+[env]
 platform = atmelavr
 framework = arduino
-board = nanoatmega328
 extra_scripts = pre:extra_script.py
 monitor_speed = 9600
 lib_ldf_mode  = deep+
@@ -9,4 +11,11 @@ lib_deps =
 	arduino-libraries/Servo@^1.2.1
 	teckel12/NewPing@^1.9.7
 	arminjo/IRremote@^4.3.0
-	
+
+[env:nano]
+board = nanoatmega328
+upload_port = /dev/ttyUSB0
+
+[env:nanotypec]
+board = nanoatmega328new
+upload_port = /dev/ttyUSB1
